Added favicon and updated meta description

--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,31 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Blockly Playwright - Demo</title>
+        <meta
+            name="description"
+            content="A demo showcasing the usage of the blockly-playwright blocks for generating code for e2e tests"
+        />
         <link rel="preconnect" href="https://cdn.jsdelivr.net" />
         <link rel="preconnect" href="https://unpkg.com" />
         <link rel="preconnect" href="https://cdnjs.cloudflare.com" />
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="/apple-touch-icon.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="/favicon-32x32.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="/favicon-16x16.png"
+        />
+        <link rel="manifest" href="/site.webmanifest" />
         <link
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css"
