Fixed issue with link no referrer

--- a/public/index.html
+++ b/public/index.html
@@ -60,6 +60,7 @@
                     <a
                         target="_blank"
                         href="https://github.com/nisheed2440/blockly-playwright#setup-local-development-enviroment"
+                        rel="noreferrer"
                         >Local Setup</a
                     >
                 </div>
